--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,10 +18,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:background="@drawable/nose_up"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/caffe_prima"
         android:contentDescription="@string/description_image" />
 
     <TextView
@@ -40,7 +40,7 @@
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
         android:background="@android:color/transparent" />
 
@@ -48,8 +48,9 @@
         android:id="@+id/ImageButtonMoonWalk"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
